@@ -46,6 +46,9 @@ main(int argc, char **argv)
     double factor, temp;
     int i, j, doit, of, count, val, *col_list;
 
+    fprintf(stderr,"DEPRECATION WARNING:  This command is scheduled for removal.  Please contact the developers if you use this command.\n\n");
+    sleep(1);
+
     if ( BU_STR_EQUAL(argv[1], "-h") || BU_STR_EQUAL(argv[1], "-?") )
 	printusage();
     if (argc < 4)
